# docs/swagger.yaml
@@ -78,6 +78,8 @@ definitions:
         items:
           type: integer
         type: array
+      service_type:
+        type: string
       started_at:
         type: string
       status:
@@ -345,20 +347,6 @@ paths:
               type: string
             type: object
       summary: Получить стартовую информацию
-      tags:
-      - tickets
-  /tickets:
-    get:
-      description: Возвращает обновления по талонам (создание, изменение, удаление)
-        через SSE
-      produces:
-      - text/event-stream
-      responses:
-        "200":
-          description: Обновление талона
-          schema:
-            $ref: '#/definitions/models.TicketResponse'
-      summary: SSE обновления талонов
       tags:
       - tickets
 swagger: "2.0"
